# betteroffice

./: .gitignore  AGENTS.md  CCLA.md  CLA.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RELEASING.md  SECURITY.md  THIRD-PARTY-NOTICES.md  bunfig.toml  deny.toml  package.json
crates/betteroffice-docx/: Cargo.toml  README.md
crates/betteroffice-docx/src/: document.rs  error.rs  lib.rs  types.rs
crates/betteroffice-docx/tests/: document.rs
crates/betteroffice-pptx/: Cargo.toml  README.md
crates/betteroffice-pptx/src/: error.rs  lib.rs  presentation.rs  types.rs
crates/betteroffice-pptx/tests/: facade.rs
crates/betteroffice-xlsx/: Cargo.toml  README.md
crates/betteroffice-xlsx/src/: authority.rs  error.rs  lib.rs  types.rs  workbook.rs
crates/betteroffice-xlsx/tests/: workbook.rs
crates/docx-edit/: .gitignore  Cargo.toml
crates/docx-edit/src/: canonical.rs  ctx.rs  engine.rs  format.rs  frame_delta.rs  lib.rs  op.rs  presence.rs  queries.rs  raw.rs  read_state.rs  seed.rs  undo.rs  wasm.rs
crates/docx-edit/src/bridge/: mod.rs  shapes.rs
crates/docx-edit/src/frame_delta/: typed_page.rs
crates/docx-edit/src/ops/: embed.rs  mod.rs  paragraph.rs  resolve.rs  table.rs  text.rs
crates/docx-edit/tests/: op_corpus.rs  resolve_corpus.rs
crates/docx-layout/: .gitignore  Cargo.toml
crates/docx-layout/src/: break_policy.rs  canonical.rs  cell_layout.rs  column_balancing.rs  display_list.rs  floating_objects.rs  footnotes.rs  header_footer.rs  hf_bands.rs  hit.rs  hooks.rs  keep_together.rs  lib.rs  measure_blocks.rs  page_flow.rs  paragraph_spacing.rs  place.rs  prescan.rs  regions.rs  resolve_lines.rs  section_breaks.rs  session.rs  table_grid.rs  table_row_break.rs  types.rs
crates/docx-layout/tests/: display_list.rs  glyph_run.rs  goldens.rs  hf_bands.rs  measure_surface.rs
crates/docx-layout/tests/fixtures/: column-break-in-multi-column.displaylist.json  column-break-in-multi-column.golden.json  column-break-in-multi-column.input.json  continuous-section-column-change.displaylist.json  continuous-section-column-change.golden.json  continuous-section-column-change.input.json  display-list-demo.json  explicit-and-attribute-page-breaks.displaylist.json  explicit-and-attribute-page-breaks.golden.json  explicit-and-attribute-page-breaks.input.json  floating-image-with-text-wrap.displaylist.json  floating-image-with-text-wrap.golden.json  floating-image-with-text-wrap.input.json  footnotes-force-content-up.displaylist.json  footnotes-force-content-up.golden.json  footnotes-force-content-up.input.json  keep-lines-paragraph.displaylist.json  keep-lines-paragraph.golden.json  keep-lines-paragraph.input.json  keep-with-next-chain.displaylist.json  keep-with-next-chain.golden.json  keep-with-next-chain.input.json  mixed-run-line-segments.displaylist.json  mixed-run-line-segments.golden.json  mixed-run-line-segments.input.json  multi-page-paragraph-overflow.displaylist.json  multi-page-paragraph-overflow.golden.json  multi-page-paragraph-overflow.input.json  multi-section-next-page-geometry.displaylist.json  multi-section-next-page-geometry.golden.json  multi-section-next-page-geometry.input.json  single-page-multi-paragraph.displaylist.json  single-page-multi-paragraph.golden.json  single-page-multi-paragraph.input.json  (+6 more)
crates/docx-parse/: Cargo.toml
crates/docx-parse/src/: block.rs  borders.rs  canonical.rs  chart.rs  comments.rs  document.rs  drawingml.rs  fonts.rs  formatting.rs  header_footer.rs  image.rs  inline.rs  lib.rs  media.rs  notes.rs  numbering.rs  paragraph.rs  relationships.rs  s2.rs  s3.rs  s4.rs  s5.rs  s6.rs  s7.rs  s8.rs  s9.rs  scalars.rs  section.rs  settings.rs  shape.rs  smart_art.rs  styles.rs  table.rs  tabs.rs  text_box.rs  theme.rs  vml.rs  wrap.rs  xml.rs
crates/docx-wasm/: Cargo.toml
crates/docx-wasm/src/: core.rs  lib.rs
crates/ooxml-drawingml/: Cargo.toml
crates/ooxml-drawingml/src/: chart.rs  color.rs  geometry.rs  lib.rs  picture.rs  shape.rs  theme.rs
crates/ooxml-opc/: Cargo.toml
crates/ooxml-opc/src/: lib.rs  sanitize.rs
crates/ooxml-redact/: Cargo.toml
crates/ooxml-redact-cli/: Cargo.toml
crates/ooxml-redact-cli/src/: lib.rs  main.rs
crates/ooxml-redact/src/: lib.rs  media.rs  tests.rs  xml.rs
crates/ooxml-text/: Cargo.toml
crates/ooxml-text/src/: bidi.rs  font_store.rs  lib.rs  line_break.rs  line_metrics.rs  outline.rs  shape.rs  word_metrics.rs
crates/ooxml-text/src/measure/: mod.rs  (+6 more)
crates/ooxml-text/tests/: docx_text.rs  measure.rs  text.rs
crates/pptx-edit/: Cargo.toml
crates/pptx-edit/src/: deck.rs  lib.rs  model.rs  story.rs  undo.rs  wasm.rs
crates/pptx-edit/tests/: convergence.rs  shape_ops.rs
crates/pptx-parse/: Cargo.toml
crates/pptx-parse/src/: drawing.rs  error.rs  lib.rs  model.rs  package.rs  relationships.rs  theme.rs  xml.rs
crates/pptx-render/: Cargo.toml
crates/pptx-render/src/: display_list.rs  layout.rs  lib.rs
crates/pptx-wasm/: Cargo.toml
crates/pptx-wasm/src/: lib.rs
crates/xlsx-calc/: Cargo.toml  README.md
crates/xlsx-calc/examples/: demo.rs
crates/xlsx-calc/src/: deps.rs  engine.rs  eval.rs  graph.rs  lexer.rs  lib.rs  parser.rs  printer.rs
crates/xlsx-calc/tests/: eval_fixtures.rs  functions.rs
crates/xlsx-cli/: Cargo.toml
crates/xlsx-cli/src/: lib.rs  main.rs
crates/xlsx-cli/tests/: render.rs
crates/xlsx-model/: Cargo.toml
crates/xlsx-model/src/: addr.rs  date.rs  lib.rs  numfmt.rs  styles.rs  value.rs  workbook.rs
crates/xlsx-ops/: Cargo.toml
crates/xlsx-ops/src/: apply.rs  formatting.rs  input.rs  lib.rs  op.rs  proposals.rs  remap.rs  undo.rs
crates/xlsx-ops/tests/: integration.rs
crates/xlsx-parse/: Cargo.toml
crates/xlsx-parse/src/: lib.rs  read.rs  styles.rs  tests.rs  write.rs  xml.rs
crates/xlsx-raster/: Cargo.toml
crates/xlsx-raster/assets/: README.md
crates/xlsx-raster/src/: font.rs  lib.rs
crates/xlsx-raster/tests/: golden.rs
crates/xlsx-render/: Cargo.toml
crates/xlsx-render/src/: display_list.rs  geometry.rs  lib.rs  region.rs
crates/xlsx-wasm/: Cargo.toml
crates/xlsx-wasm/src/: core.rs  lib.rs
(+162 files in other folders)
