[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://betteroffice.dev"
repository = "https://github.com/openooxml/betteroffice"

[workspace.dependencies]
betteroffice-xlsx = { path = "crates/betteroffice-xlsx", version = "0.0.0", default-features = false }
ooxml-opc = { package = "betteroffice-opc", path = "crates/ooxml-opc", version = "0.0.0" }
xlsx-model = { package = "betteroffice-xlsx-model", path = "crates/xlsx-model", version = "0.0.0" }
xlsx-parse = { package = "betteroffice-xlsx-parse", path = "crates/xlsx-parse", version = "0.0.0" }
xlsx-calc = { package = "betteroffice-xlsx-calc", path = "crates/xlsx-calc", version = "0.0.0" }
xlsx-ops = { package = "betteroffice-xlsx-ops", path = "crates/xlsx-ops", version = "0.0.0" }
xlsx-render = { package = "betteroffice-xlsx-render", path = "crates/xlsx-render", version = "0.0.0" }
xlsx-raster = { package = "betteroffice-xlsx-raster", path = "crates/xlsx-raster", version = "0.0.0" }

[profile.release]
opt-level = "s"
lto = true
