[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
homepage = "https://betteroffice.dev"
repository = "https://github.com/openooxml/betteroffice"

[workspace.dependencies]
betteroffice-xlsx = { path = "crates/betteroffice-xlsx", version = "0.0.1", default-features = false }
ooxml-opc = { package = "betteroffice-opc", path = "crates/ooxml-opc", version = "0.0.1" }
xlsx-model = { package = "betteroffice-xlsx-model", path = "crates/xlsx-model", version = "0.0.1" }
xlsx-parse = { package = "betteroffice-xlsx-parse", path = "crates/xlsx-parse", version = "0.0.1" }
xlsx-calc = { package = "betteroffice-xlsx-calc", path = "crates/xlsx-calc", version = "0.0.1" }
xlsx-ops = { package = "betteroffice-xlsx-ops", path = "crates/xlsx-ops", version = "0.0.1" }
xlsx-render = { package = "betteroffice-xlsx-render", path = "crates/xlsx-render", version = "0.0.1" }
xlsx-raster = { package = "betteroffice-xlsx-raster", path = "crates/xlsx-raster", version = "0.0.1" }
ooxml-text = { package = "betteroffice-ooxml-text", path = "crates/ooxml-text", version = "0.0.1" }
ooxml-drawingml = { package = "betteroffice-drawingml", path = "crates/ooxml-drawingml", version = "0.0.1" }
docx-parse = { package = "betteroffice-docx-parse", path = "crates/docx-parse", version = "0.0.1" }
docx-layout = { package = "betteroffice-docx-layout", path = "crates/docx-layout", version = "0.0.1" }
docx-edit = { package = "betteroffice-docx-edit", path = "crates/docx-edit", version = "0.0.1" }
betteroffice-docx = { path = "crates/betteroffice-docx", version = "0.0.1" }
pptx-parse = { package = "betteroffice-pptx-parse", path = "crates/pptx-parse", version = "0.0.1" }
pptx-edit = { package = "betteroffice-pptx-edit", path = "crates/pptx-edit", version = "0.0.1" }
pptx-render = { package = "betteroffice-pptx-render", path = "crates/pptx-render", version = "0.0.1" }
betteroffice-pptx = { path = "crates/betteroffice-pptx", version = "0.0.1" }

[profile.release]
opt-level = "s"
lto = true

[profile.release.package.betteroffice-docx-layout]
opt-level = 3

[profile.release.package.betteroffice-docx-parse]
opt-level = 3

# The per-keystroke hot path lives in docx-edit (engine session, frame
# encoding), ooxml-text (shaping/measurement), and yrs (text CRDT ops); the
# size-optimized workspace default measurably slows all three.
[profile.release.package.betteroffice-docx-edit]
opt-level = 3

[profile.release.package.betteroffice-ooxml-text]
opt-level = 3

[profile.release.package.yrs]
opt-level = 3
