[package]
name = "betteroffice-docx"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Typed native Rust facade for DOCX parsing, editing, layout, and serialization."
readme = "README.md"
keywords = ["docx", "word", "ooxml", "wordprocessingml"]
categories = ["parser-implementations", "rendering"]

[dependencies]
docx-edit.workspace = true
docx-layout.workspace = true
docx-parse.workspace = true
sha2 = "0.10"

[dev-dependencies]
ooxml-opc.workspace = true
serde_json = "1"
