[package]
name = "betteroffice-pptx"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Typed native Rust facade for parsing, editing, rendering, and saving PPTX presentations."
readme = "README.md"
keywords = ["pptx", "powerpoint", "ooxml", "presentationml"]
categories = ["parser-implementations", "rendering"]

[dependencies]
pptx-edit.workspace = true
pptx-parse.workspace = true
pptx-render.workspace = true
