[package]
name = "betteroffice-xlsx"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Typed XLSX editor, calculation, rendering, and serialization facade."
readme = "README.md"
keywords = ["xlsx", "spreadsheet", "ooxml", "excel"]
categories = ["parser-implementations", "rendering"]

[features]
default = ["raster"]
raster = ["dep:xlsx-raster"]

[dependencies]
ooxml-opc.workspace = true
xlsx-model.workspace = true
xlsx-parse.workspace = true
xlsx-calc.workspace = true
xlsx-ops.workspace = true
xlsx-render.workspace = true
xlsx-raster = { workspace = true, optional = true }
