[package]
name = "betteroffice-docx-edit"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Pilcrow-stream yrs editing foundation for collaborative DOCX documents."
keywords = ["docx", "word", "ooxml", "collaboration"]
categories = ["text-processing", "data-structures"]

[lib]
name = "docx_edit"
# cdylib feeds the wasm-bindgen boundary (feature = "wasm"); rlib keeps the
# native unit tests and in-workspace crate consumers unchanged.
crate-type = ["cdylib", "rlib"]

[features]
# The JS/wasm session boundary (src/wasm.rs). Off by default so native builds
# and `cargo test` never pull the wasm-bindgen stack; wasm-pack builds pass
# `--features wasm` (driven by scripts/embed-edit-wasm.mjs).
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
# 0.27.3 is the newest crates.io release. The repository's minimumReleaseAge is a Bun/npm
# policy; there is no Cargo deny/release-age policy, and the existing lockfile already pins it.
docx-layout.workspace = true
docx-parse.workspace = true
ryu-js = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yrs = "0.27.3"
unicode-segmentation = "1.12"
# serde_json is a non-optional dep above (the render bridge needs it in native
# builds too), so the `wasm` feature does not re-declare it as `dep:serde_json`.
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
