[package]
name = "docx-layout"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "DOCX pagination and target-agnostic display-list generation."

[dependencies]
ooxml-text = { path = "../ooxml-text" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
