[package]
name = "docx-parse"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Safe DOCX XML parsing, typed relationship models, and the versioned Rust/TypeScript equivalence contract."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
ooxml-opc.workspace = true
indexmap = { version = "2", features = ["serde"] }
quick-xml = { version = "0.41", features = ["encoding"] }
ryu-js = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
wasm-bindgen = "0.2"
