[package]
name = "betteroffice-docx-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Safe DOCX XML parsing, typed relationship models, and the versioned canonical document contract."
keywords = ["docx", "word", "ooxml", "wordprocessingml"]
categories = ["parser-implementations", "encoding"]

[lib]
name = "docx_parse"
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
ooxml-opc.workspace = true
indexmap = { version = "2", features = ["serde"] }
ooxml-drawingml.workspace = true
quick-xml = { version = "0.41", features = ["encoding"] }
ryu-js = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
wasm-bindgen = "0.2"
