[package]
name = "docx-wasm"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "The wasm-bindgen boundary for DOCX package, layout, and display-list operations."

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]

[dependencies]
docx-layout = { path = "../docx-layout" }
js-sys = "0.3"
ooxml-opc = { path = "../ooxml-opc" }
ooxml-text = { path = "../ooxml-text" }
wasm-bindgen = "0.2"

[dev-dependencies]
serde_json = "1"
