[package]
name = "betteroffice-drawingml"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Shared DrawingML colors, themes, shape models, and preset geometry."
keywords = ["ooxml", "drawingml", "graphics", "office"]
categories = ["graphics", "rendering", "data-structures"]

[lib]
name = "ooxml_drawingml"

[dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
