[package]
name = "betteroffice-opc"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "OPC (OOXML zip) container reader/writer with zip-bomb and path-traversal guards enforced by construction."

[lib]
name = "ooxml_opc"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
