[package]
name = "betteroffice-ooxml-text"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Shared OOXML text shaping, measurement, line breaking, and bidirectional text support."
keywords = ["ooxml", "text", "typography", "fonts"]
categories = ["text-processing", "rendering"]

[lib]
name = "ooxml_text"
crate-type = ["rlib"]

[dependencies]
skrifa = "0.44"
rustybuzz = "0.20"
unicode-linebreak = "0.1"
unicode-bidi = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
