[package]
name = "betteroffice-pptx-edit"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Collaborative yrs-backed editing core for PPTX decks."
keywords = ["pptx", "powerpoint", "ooxml", "collaboration"]
categories = ["text-processing", "data-structures"]

[lib]
name = "pptx_edit"
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["dep:js-sys", "dep:wasm-bindgen"]

[dependencies]
js-sys = { version = "0.3", optional = true }
ooxml-drawingml.workspace = true
pptx-parse.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
wasm-bindgen = { version = "0.2", optional = true }
yrs = "0.27.3"
