[package]
name = "betteroffice-pptx-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Bounded PresentationML parsing and byte-preserving PPTX package serialization."
keywords = ["pptx", "powerpoint", "ooxml", "presentationml"]
categories = ["parser-implementations", "encoding"]

[lib]
name = "pptx_parse"

[dependencies]
ooxml-drawingml.workspace = true
ooxml-opc.workspace = true
quick-xml = { version = "0.41", features = ["encoding"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
