[package]
name = "betteroffice-pptx-render"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Rust-owned PPTX slide layout and display-list compiler."
keywords = ["pptx", "powerpoint", "ooxml", "rendering"]
categories = ["rendering", "graphics"]

[lib]
name = "pptx_render"

[dependencies]
ooxml-drawingml.workspace = true
ooxml-text.workspace = true
pptx-edit.workspace = true
pptx-parse.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
