[package]
name = "pptx-wasm"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "The wasm-bindgen boundary for PPTX display-list compilation."

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]

[dependencies]
pptx-edit = { workspace = true, features = ["wasm"] }
pptx-parse.workspace = true
pptx-render.workspace = true
serde_json = "1"
wasm-bindgen = "0.2"
