[package]
name = "betteroffice-xlsx-calc"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Formula parser, dependency graph, and recalc engine for BetterOffice XLSX workbooks."

[lib]
name = "xlsx_calc"

[dependencies]
xlsx-model.workspace = true
