[package]
name = "betteroffice-xlsx-model"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Workbook, worksheet, and cell model for SpreadsheetML: address types, values, styles. Framework- and IO-free."

[lib]
name = "xlsx_model"

[dependencies]
serde = { version = "1", features = ["derive"] }
