[package]
name = "xlsx-ops"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Invertible op log: undo/redo, provenance-tagged proposals, address remapping, collab-ready serialization."

[dependencies]
serde = { version = "1", features = ["derive"] }
xlsx-model = { path = "../xlsx-model" }
xlsx-calc = { path = "../xlsx-calc" }

[dev-dependencies]
serde_json = "1"
