[package]
name = "betteroffice-xlsx-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Streaming SpreadsheetML parser and serializer building the BetterOffice workbook model."

[lib]
name = "xlsx_parse"

[dependencies]
quick-xml = "0.41"
xlsx-model.workspace = true
