[package]
name = "xlsx-raster"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "Server-side raster backend (tiny-skia) for the display list. Never part of the wasm build."

[dependencies]
tiny-skia = "0.11"
rustybuzz = "0.20"
xlsx-render = { path = "../xlsx-render" }
