[package]
name = "betteroffice-xlsx-raster"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Server-side raster backend (tiny-skia) for the display list. Never part of the wasm build."

[lib]
name = "xlsx_raster"

[dependencies]
tiny-skia = "0.12"
png = "0.18"
rustybuzz = "0.20"
xlsx-render.workspace = true
