[package]
name = "betteroffice-xlsx-render"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = ["crates-io"]
description = "Grid layout and target-agnostic display list. Never imports canvas, DOM, or any raster backend."

[lib]
name = "xlsx_render"

[dependencies]
serde = { version = "1", features = ["derive"] }
xlsx-model.workspace = true
