[package]
name = "xlsx-wasm"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "The single wasm-bindgen boundary: coarse JSON-string calls over the workbook core. Thin by design."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["raster"]
raster = ["dep:xlsx-raster"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ooxml-opc = { path = "../ooxml-opc" }
xlsx-model = { path = "../xlsx-model" }
xlsx-parse = { path = "../xlsx-parse" }
xlsx-calc = { path = "../xlsx-calc" }
xlsx-ops = { path = "../xlsx-ops" }
xlsx-render = { path = "../xlsx-render" }
xlsx-raster = { path = "../xlsx-raster", optional = true }
